--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
     - name: Install dependencies
       run: sudo apt update && sudo apt install -y cmake g++
 
+    - name: List files for debug
+      run: ls -la
+
+
     - name: Configure
       run: cmake .
 
