--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install dependencies
       run: sudo apt update && sudo apt install -y cmake g++
@@ -19,7 +19,7 @@ jobs:
 
 
     - name: Configure
-      run: cmake ..
+      run: cmake .
 
     - name: Build
       run: cmake --build .
