--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: CI/CD main_yml
 on:
   push:
   workflow_dispatch:
+  pull_request:
+    branches:
+      -main
 
 jobs:
   build:
@@ -24,3 +27,6 @@ jobs:
 
     - name: Build
       run: cmake --build .
+    
+    -name: Test
+    run:   ctest --output-on-failure
